# Registration-System-V2

./: CMakeLists.txt  Helper.cpp  Helper.h  README.md  UserFlowController.cpp  UserFlowController.h  main.cpp
Characters/: Doctor.cpp  Doctor.h  Person.cpp  Person.h  Student.cpp  Student.h
Mangers/: AssignmentManger.cpp  AssignmentManger.h  CourseManger.cpp  CourseManger.h  DoctorManger.cpp  DoctorManger.h  StudentManger.cpp  StudentManger.h
Material/: Assignment.cpp  Assignment.h  AssignmentSolution.cpp  AssignmentSolution.h  Course.cpp  Course.h
